--- a/main.html
+++ b/main.html
@@ -11,6 +11,37 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<button>
+		block-inline-button
+	</button><br>
+	<div>
+		block-inline-div
+	</div>
+	<span>
+		block-inline-span
+	</span>
+	<p>
+		block-inline-p
+	</p><br>
+	
+	<input>block-inline-input
+
+	<br>
+	<cite>
+		block-inline-cite
+	</cite>
+	<code>
+		block-inline-code
+	</code>
+	<h1>
+		block-inline-h1
+	</h1>
+	<sub>
+		block-inline-sup
+	</sub>
+	<sub>
+		block-inline-sub
+	</sub>
 </body>
 
 </html>
